# a2a-holiday-planner

./: .gitignore  README.md  pyproject.toml
activities_crewai/: main.py
activities_crewai/app/: agent.py  agent_executor.py
budget_agent/: main.py
budget_agent/app/: agent_executor.py
budget_langgraph/: main.py
budget_langgraph/app/: agent.py  agent_executor.py
flights_crewai/: main.py
flights_crewai/app/: agent.py  agent_executor.py
host/: main.py
host/app/: agent_executor.py  host_graph.py  itinerary_tools.py  remote_connection.py  schemas.py
host_agent_last/agent/: __init__.py  agent.py  itinerary_tools.py  remote_connection.py  schemas.py
hotels_crewai/: main.py
hotels_crewai/app/: agent.py  agent_executor.py
ui/: app.py
